2007-03-03  Thiago Macieira  <thiago@kde.org>

	* dbus/dbus-sysdeps-unix.c: capture the dbus-launch stderr
        output and add it to the DBusError message we return.

	* tools/dbus-launch.1:
	* tools/dbus-launch.c: Add option --close-stderr to, well,
	close stderr before starting dbus-daemon.

2007-01-31  Havoc Pennington  <hp@redhat.com>

	* bus/dbus-daemon.1.in: write a section in the man page on running
	a test daemon for debugging purposes

2007-01-26  Havoc Pennington  <hp@redhat.com>

	* bus/session.conf.in: override all the default limits with much
	higher limits on the session bus, there is no reason the session
	bus should have low limits

	* bus/config-parser.c (bus_config_parser_new): increase default
	limits so they are less likely to be hit; in particular the max
	replies per connection was way too low

2006-12-12  John (J5) Palmieri  <johnp@redhat.com>

	* Released 1.0.2

2006-12-12  John (J5) Palmieri  <johnp@redhat.com>

	* bus/signal.c: Fix match_rule_equal errata
	(CVE-2006-6107 - Patch from Kimmo Hämäläinen 
	<kimmo.hamalainen@nokia.com>)

2006-11-19  Thiago Macieira  <thiago@kde.org>

	* dbus/dbus-sysdeps-pthread.c (_dbus_pthread_mutex_lock,
        _dbus_pthread_condvar_wait,
        _dbus_pthread_condvar_wait_timeout): set pmutex->holder to
        pthread_self() after coming back from a conditional variable
        wait as well as in one codepath where it was forgotten.
	Approved by: Havoc Pennington.

2006-11-17  Havoc Pennington  <hp@redhat.com>

	* update-dbus-docs.sh: allow setting fd.org username via env
	variable. Make it run autogen with --enable-xml-docs=yes
	--enable-doxygen-docs=yes so configure will fail if the required
	tools are missing.

2006-11-17  Havoc Pennington  <hp@redhat.com>

	* doc/dbus-faq.xml: minor FAQ tweaks

2006-11-17  John (J5) Palmieri  <johnp@redhat.com>

	* Released 1.0.1

2006-11-14  Havoc Pennington  <hp@redhat.com>
	
	* dbus/dbus-misc.c, dbus/dbus-misc.h: Move