@@ -76,14 +76,14 @@
 #endif
 
 static dbus_bool_t
-_dbus_open_socket (int              *fd,
+_dbus_open_socket (int              *fd_p,
                    int               domain,
                    int               type,
                    int               protocol,
                    DBusError        *error)
 {
-  *fd = socket (domain, type, protocol);
-  if (fd >= 0)
+  *fd_p = socket (domain, type, protocol);
+  if (*fd_p >= 0)
     {
       return TRUE;
     }
